--- a/runtime/util/BUILD
+++ b/runtime/util/BUILD
@@ -29,14 +29,14 @@ cc_library(
     name = "convert_tensor_buffer",
     hdrs = ["convert_tensor_buffer.h"],
     deps = [
-        "//third_party/absl/log:absl_check",
-        "//third_party/absl/types:span",
-        "@litert//litert/c:litert_common",
-        "@litert//litert/cc:litert_element_type",
-        "@litert//litert/cc:litert_expected",
-        "@litert//litert/cc:litert_layout",
-        "@litert//litert/cc:litert_model",
-        "@litert//litert/cc:litert_tensor_buffer",
+        "@com_google_absl//absl/log:absl_check",
+        "@com_google_absl//absl/types:span",
+        "@litert//litert/litert/c:litert_common",
+        "@litert//litert/litert/cc:litert_element_type",
+        "@litert//litert/litert/cc:litert_expected",
+        "@litert//litert/litert/cc:litert_layout",
+        "@litert//litert/litert/cc:litert_model",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -46,10 +46,10 @@ cc_test(
     deps = [
         ":convert_tensor_buffer",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/types:span",
-        "@litert//litert/c:litert_common",
-        "@litert//litert/cc:litert_model",
-        "@litert//litert/cc:litert_tensor_buffer",
+        "@com_google_absl//absl/types:span",
+        "@litert//litert/litert/c:litert_common",
+        "@litert//litert/litert/cc:litert_model",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -61,11 +61,11 @@ cc_library(
         "status_macros.h",
     ],
     deps = [
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "@litert//litert/c:litert_common",
-        "@litert//litert/cc:litert_expected",
-        "@litert//litert/cc:litert_macros",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@litert//litert/litert/c:litert_common",
+        "@litert//litert/litert/cc:litert_expected",
+        "@litert//litert/litert/cc:litert_macros",
     ],
 )
 
@@ -75,10 +75,10 @@ cc_test(
     deps = [
         ":litert_status_util",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "@litert//litert/c:litert_common",
-        "@litert//litert/cc:litert_expected",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@litert//litert/litert/c:litert_common",
+        "@litert//litert/litert/cc:litert_expected",
     ],
 )
 
@@ -88,8 +88,8 @@ cc_test(
     deps = [
         ":litert_status_util",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
     ],
 )
 
@@ -97,7 +97,7 @@ cc_library(
     name = "logging",
     hdrs = ["logging.h"],
     deps = [
-        "//third_party/absl/strings",
+        "@com_google_absl//absl/strings",
     ],
 )
 
@@ -106,11 +106,11 @@ cc_library(
     srcs = ["logging_tensor_buffer.cc"],
     hdrs = ["logging_tensor_buffer.h"],
     deps = [
-        "//third_party/absl/log:absl_check",
-        "//third_party/absl/strings",
-        "//third_party/absl/types:span",
-        "@litert//litert/cc:litert_element_type",
-        "@litert//litert/cc:litert_tensor_buffer",
+        "@com_google_absl//absl/log:absl_check",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:span",
+        "@litert//litert/litert/cc:litert_element_type",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -121,10 +121,10 @@ cc_test(
         ":logging",
         ":logging_tensor_buffer",
         "@com_google_googletest//:gtest_main",
-        "@litert//litert/c:litert_tensor_buffer",
-        "@litert//litert/cc:litert_element_type",
-        "@litert//litert/cc:litert_model",
-        "@litert//litert/cc:litert_tensor_buffer",
+        "@litert//litert/litert/c:litert_tensor_buffer",
+        "@litert//litert/litert/cc:litert_element_type",
+        "@litert//litert/litert/cc:litert_model",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -133,8 +133,8 @@ cc_library(
     srcs = ["tensor_buffer_util.cc"],
     hdrs = ["tensor_buffer_util.h"],
     deps = [
-        "@litert//litert/cc:litert_macros",
-        "@litert//litert/cc:litert_tensor_buffer",
+        "@litert//litert/litert/cc:litert_macros",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -160,10 +160,10 @@ cc_library(
     ],
     deps = [
         ":scoped_file",
-        "//third_party/absl/cleanup",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
+        "@com_google_absl//absl/cleanup",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "//runtime/util:litert_status_util",
     ],
 )
 
@@ -175,8 +175,8 @@ cc_test(
         ":scoped_file",
         "//testing/base/public:gunit",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings:string_view",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
     ],
 )
 
@@ -188,9 +188,9 @@ cc_library(
     }),
     hdrs = ["scoped_file.h"],
     deps = [
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings:string_view",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
+        "//runtime/util:litert_status_util",
     ],
 )
 
@@ -206,13 +206,13 @@ cc_library(
         ":external_file_cc_proto",
         ":external_file_handler",
         ":zip_utils",
-        "//third_party/absl/container:flat_hash_map",
-        "//third_party/absl/memory",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:str_format",
-        "@litert//litert/cc:litert_macros",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+        "@litert//litert/litert/cc:litert_macros",
     ],
 )
 
@@ -236,12 +236,12 @@ cc_library(
     ],
     deps = [
         ":external_file_cc_proto",
-        "//third_party/absl/memory",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:str_format",
-        "@litert//litert/cc:litert_macros",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+        "@litert//litert/litert/cc:litert_macros",
     ],
 )
 
@@ -250,7 +250,7 @@ cc_library(
     srcs = ["zip_readonly_mem_file.cc"],
     hdrs = ["zip_readonly_mem_file.h"],
     deps = [
-        "//third_party/absl/strings",
+        "@com_google_absl//absl/strings",
         "//third_party/minizip:zlib_minizip",
         "//third_party/zlib:zlibheaders",
     ],
@@ -266,14 +266,14 @@ cc_library(
     deps = [
         ":external_file_cc_proto",
         ":zip_readonly_mem_file",
-        "//third_party/absl/cleanup",
-        "//third_party/absl/container:flat_hash_map",
-        "//third_party/absl/log:absl_log",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings:string_view",
+        "@com_google_absl//absl/cleanup",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/log:absl_log",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
         "//third_party/minizip:zlib_minizip",
-        "@litert//litert/cc:litert_macros",
+        "@litert//litert/litert/cc:litert_macros",
         "//third_party/zlib:zlibheaders",
     ],
 )
