--- a/runtime/core/BUILD
+++ b/runtime/core/BUILD
@@ -27,26 +27,26 @@ cc_library(
     srcs = ["engine_impl.cc"],
     deps = [
         ":session_factory",
-        "//third_party/absl/log",
-        "//third_party/absl/log:absl_check",
-        "//third_party/absl/log:absl_log",
-        "//third_party/absl/log:check",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:string_view",
-        "//third_party/odml/litert_lm/runtime/components:sentencepiece_tokenizer",
-        "//third_party/odml/litert_lm/runtime/components:tokenizer",
-        "//third_party/odml/litert_lm/runtime/engine:engine_interface",
-        "//third_party/odml/litert_lm/runtime/engine:llm_model_settings",
-        "//third_party/odml/litert_lm/runtime/executor:litert_compiled_model_executor_utils",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor_config",
-        "//third_party/odml/litert_lm/runtime/executor:llm_litert_compiled_model_executor",
-        "//third_party/odml/litert_lm/runtime/proto:sampler_params_cc_proto",
-        "//third_party/odml/litert_lm/runtime/util:external_file_cc_proto",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
-        "//third_party/odml/litert_lm/runtime/util:model_asset_bundle_resources",
+        "@com_google_absl//absl/log",
+        "@com_google_absl//absl/log:absl_check",
+        "@com_google_absl//absl/log:absl_log",
+        "@com_google_absl//absl/log:check",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "//runtime/components:sentencepiece_tokenizer",
+        "//runtime/components:tokenizer",
+        "//runtime/engine:engine_interface",
+        "//runtime/engine:llm_model_settings",
+        "//runtime/executor:litert_compiled_model_executor_utils",
+        "//runtime/executor:llm_executor",
+        "//runtime/executor:llm_executor_config",
+        "//runtime/executor:llm_litert_compiled_model_executor",
+        "//runtime/proto:sampler_params_cc_proto",
+        "//runtime/util:external_file_cc_proto",
+        "//runtime/util:litert_status_util",
+        "//runtime/util:model_asset_bundle_resources",
     ],
 )
 
@@ -55,17 +55,17 @@ cc_test(
     srcs = ["engine_impl_test.cc"],
     # The LiteRT GPU path is not ready yet. Only test the CPU path.
     args = ["--gunit_filter=EngineTest.CreateEngine"],
-    data = ["//third_party/odml/litert_lm/runtime/testdata"],
+    data = ["//runtime/testdata"],
     deps = [
         ":engine_impl",  # buildcleaner: keep
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/log:absl_check",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings:string_view",
-        "//third_party/odml/litert_lm/runtime/engine:engine_interface",
-        "//third_party/odml/litert_lm/runtime/engine:llm_model_settings",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor_config",
+        "@com_google_absl//absl/log:absl_check",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
+        "//runtime/engine:engine_interface",
+        "//runtime/engine:llm_model_settings",
+        "//runtime/executor:llm_executor_config",
     ],
 )
 
@@ -74,18 +74,18 @@ cc_library(
     srcs = ["pipeline.cc"],
     hdrs = ["pipeline.h"],
     deps = [
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:string_view",
-        "@litert//litert/cc:litert_tensor_buffer",
-        "//third_party/odml/litert_lm/runtime/components:sampler",
-        "//third_party/odml/litert_lm/runtime/components:token_id_util",
-        "//third_party/odml/litert_lm/runtime/components:tokenizer",
-        "//third_party/odml/litert_lm/runtime/engine:io_types",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor",
-        "//third_party/odml/litert_lm/runtime/util:convert_tensor_buffer",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "//runtime/components:sampler",
+        "//runtime/components:token_id_util",
+        "//runtime/components:tokenizer",
+        "//runtime/engine:io_types",
+        "//runtime/executor:llm_executor",
+        "//runtime/util:convert_tensor_buffer",
+        "//runtime/util:litert_status_util",
     ],
 )
 
@@ -93,18 +93,18 @@ cc_test(
     name = "pipeline_test",
     srcs = ["pipeline_test.cc"],
     data = [
-        "//third_party/odml/litert_lm/runtime/components/testdata:sentencepiece.model",
+        "//runtime/components/testdata:sentencepiece.model",
     ],
     deps = [
         ":pipeline",
         "@com_google_googletest//:gtest_main",
-        "//third_party/odml/litert_lm/runtime/components:sentencepiece_tokenizer",
-        "//third_party/odml/litert_lm/runtime/components:tokenizer",
-        "//third_party/odml/litert_lm/runtime/components:top_p_cpu_sampler",
-        "//third_party/odml/litert_lm/runtime/engine:io_types",
-        "//third_party/odml/litert_lm/runtime/executor:fake_llm_executor",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor",
-        "//third_party/odml/litert_lm/runtime/util:convert_tensor_buffer",
+        "//runtime/components:sentencepiece_tokenizer",
+        "//runtime/components:tokenizer",
+        "//runtime/components:top_p_cpu_sampler",
+        "//runtime/engine:io_types",
+        "//runtime/executor:fake_llm_executor",
+        "//runtime/executor:llm_executor",
+        "//runtime/util:convert_tensor_buffer",
     ],
 )
 
@@ -114,21 +114,21 @@ cc_library(
     hdrs = ["session_basic.h"],
     deps = [
         ":pipeline",
-        "//third_party/absl/log:absl_log",
-        "//third_party/absl/memory",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:string_view",
-        "//third_party/odml/litert_lm/runtime/components:sampler",
-        "//third_party/odml/litert_lm/runtime/components:tokenizer",
-        "//third_party/odml/litert_lm/runtime/components:top_p_cpu_sampler",
-        "//third_party/odml/litert_lm/runtime/engine:engine_interface",
-        "//third_party/odml/litert_lm/runtime/engine:io_types",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor",
-        "//third_party/odml/litert_lm/runtime/proto:sampler_params_cc_proto",
-        "//third_party/odml/litert_lm/runtime/util:convert_tensor_buffer",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
+        "@com_google_absl//absl/log:absl_log",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "//runtime/components:sampler",
+        "//runtime/components:tokenizer",
+        "//runtime/components:top_p_cpu_sampler",
+        "//runtime/engine:engine_interface",
+        "//runtime/engine:io_types",
+        "//runtime/executor:llm_executor",
+        "//runtime/proto:sampler_params_cc_proto",
+        "//runtime/util:convert_tensor_buffer",
+        "//runtime/util:litert_status_util",
     ],
 )
 
@@ -136,16 +136,16 @@ cc_test(
     name = "session_basic_test",
     srcs = ["session_basic_test.cc"],
     data = [
-        "//third_party/odml/litert_lm/runtime/components/testdata:sentencepiece.model",
+        "//runtime/components/testdata:sentencepiece.model",
     ],
     deps = [
         ":session_basic",
         "@com_google_googletest//:gtest_main",
-        "//third_party/odml/litert_lm/runtime/components:sentencepiece_tokenizer",
-        "//third_party/odml/litert_lm/runtime/components:tokenizer",
-        "//third_party/odml/litert_lm/runtime/engine:io_types",
-        "//third_party/odml/litert_lm/runtime/executor:fake_llm_executor",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor",
+        "//runtime/components:sentencepiece_tokenizer",
+        "//runtime/components:tokenizer",
+        "//runtime/engine:io_types",
+        "//runtime/executor:fake_llm_executor",
+        "//runtime/executor:llm_executor",
     ],
 )
 
@@ -155,11 +155,11 @@ cc_library(
     hdrs = ["session_factory.h"],
     deps = [
         ":session_basic",
-        "//third_party/absl/status:statusor",
-        "//third_party/odml/litert_lm/runtime/components:tokenizer",
-        "//third_party/odml/litert_lm/runtime/engine:engine_interface",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor",
-        "//third_party/odml/litert_lm/runtime/proto:sampler_params_cc_proto",
+        "@com_google_absl//absl/status:statusor",
+        "//runtime/components:tokenizer",
+        "//runtime/engine:engine_interface",
+        "//runtime/executor:llm_executor",
+        "//runtime/proto:sampler_params_cc_proto",
     ],
 )
 
@@ -169,10 +169,10 @@ cc_test(
     deps = [
         ":session_factory",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings:string_view",
-        "//third_party/odml/litert_lm/runtime/components:tokenizer",
-        "//third_party/odml/litert_lm/runtime/executor:fake_llm_executor",
-        "//third_party/odml/litert_lm/runtime/executor:llm_executor",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
+        "//runtime/components:tokenizer",
+        "//runtime/executor:fake_llm_executor",
+        "//runtime/executor:llm_executor",
     ],
 )
