--- a/runtime/executor/BUILD
+++ b/runtime/executor/BUILD
@@ -16,7 +16,7 @@ package(
     default_applicable_licenses = ["//third_party/odml:license"],
     default_hdrs_check = "strict",
     default_visibility = [
-        "//third_party/odml/litert_lm:__subpackages__",
+        "//visibility:public",
     ],
 )
 
@@ -27,18 +27,18 @@ cc_library(
     srcs = ["litert_compiled_model_executor_utils.cc"],
     hdrs = ["litert_compiled_model_executor_utils.h"],
     deps = [
-        "//third_party/absl/container:btree",
-        "//third_party/absl/container:flat_hash_set",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "@litert//litert/cc:litert_buffer_ref",
-        "@litert//litert/cc:litert_expected",
-        "@litert//litert/cc:litert_model",
-        "@litert//litert/cc:litert_tensor_buffer",
-        "//third_party/odml/litert_lm/runtime/util:external_file_cc_proto",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
-        "//third_party/odml/litert_lm/runtime/util:model_asset_bundle_resources",
+        "@com_google_absl//absl/container:btree",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@litert//litert/litert/cc:litert_buffer_ref",
+        "@litert//litert/litert/cc:litert_expected",
+        "@litert//litert/litert/cc:litert_model",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "//runtime/util:external_file_cc_proto",
+        "//runtime/util:litert_status_util",
+        "//runtime/util:model_asset_bundle_resources",
     ],
 )
 
@@ -50,46 +50,46 @@ cc_library(
         ":litert_compiled_model_executor_utils",
         ":llm_executor",
         ":llm_executor_config",
-        "//third_party/absl/container:flat_hash_map",
-        "//third_party/absl/log:absl_log",
-        "//third_party/absl/memory",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:string_view",
-        "//third_party/absl/types:span",
-        "@litert//litert/c:litert_common",
-        "@litert//litert/cc:litert_compiled_model",
-        "@litert//litert/cc:litert_environment",
-        "@litert//litert/cc:litert_expected",
-        "@litert//litert/cc:litert_model",
-        "@litert//litert/cc:litert_options",
-        "@litert//litert/cc:litert_tensor_buffer",
-        "@litert//litert/runtime/accelerators/gpu:accelerator_options",
-        "@litert//litert/runtime/accelerators/gpu:ml_drift_cl_accelerator",
-        "//third_party/odml/litert_lm/runtime/components:top_p_cpu_sampler",
-        "//third_party/odml/litert_lm/runtime/util:convert_tensor_buffer",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/log:absl_log",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "@com_google_absl//absl/types:span",
+        "@litert//litert/litert/c:litert_common",
+        "@litert//litert/litert/cc:litert_compiled_model",
+        "@litert//litert/litert/cc:litert_environment",
+        "@litert//litert/litert/cc:litert_expected",
+        "@litert//litert/litert/cc:litert_model",
+        "@litert//litert/litert/cc:litert_options",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "@litert//litert/litert/runtime/accelerators/gpu:accelerator_options",
+        "@litert//litert/litert/runtime/accelerators/gpu:ml_drift_cl_accelerator",
+        "//runtime/components:top_p_cpu_sampler",
+        "//runtime/util:convert_tensor_buffer",
+        "//runtime/util:litert_status_util",
     ],
 )
 
 cc_test(
     name = "llm_litert_compiled_model_executor_test",
     srcs = ["llm_litert_compiled_model_executor_test.cc"],
-    data = ["//third_party/odml/litert_lm/runtime/testdata"],
+    data = ["//runtime/testdata"],
     tags = ["requires-gpu-nvidia"],
     deps = [
         ":litert_compiled_model_executor_utils",
         ":llm_executor_config",
         ":llm_litert_compiled_model_executor",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings:string_view",
-        "@litert//litert/cc:litert_buffer_ref",
-        "@litert//litert/cc:litert_expected",
-        "@litert//litert/cc:litert_model",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
-        "//third_party/odml/litert_lm/runtime/util:model_asset_bundle_resources",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
+        "@litert//litert/litert/cc:litert_buffer_ref",
+        "@litert//litert/litert/cc:litert_expected",
+        "@litert//litert/litert/cc:litert_model",
+        "//runtime/util:litert_status_util",
+        "//runtime/util:model_asset_bundle_resources",
         "//third_party/tensorflow/lite:model_builder",
     ],
 )
@@ -101,14 +101,14 @@ cc_library(
     deps = [
         ":llm_executor",
         ":llm_executor_config",
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:string_view",
-        "//third_party/absl/types:span",
-        "@litert//litert/cc:litert_tensor_buffer",
-        "//third_party/odml/litert_lm/runtime/util:convert_tensor_buffer",
-        "//third_party/odml/litert_lm/runtime/util:litert_status_util",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "@com_google_absl//absl/types:span",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "//runtime/util:convert_tensor_buffer",
+        "//runtime/util:litert_status_util",
     ],
 )
 
@@ -119,9 +119,9 @@ cc_test(
         ":fake_llm_executor",
         ":llm_executor",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/status",
-        "//third_party/absl/types:span",
-        "//third_party/odml/litert_lm/runtime/util:convert_tensor_buffer",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/types:span",
+        "//runtime/util:convert_tensor_buffer",
     ],
 )
 
@@ -131,7 +131,7 @@ cc_library(
     hdrs = ["llm_executor.h"],
     deps = [
         ":llm_executor_base",
-        "//third_party/odml/litert_lm/runtime/util:logging_tensor_buffer",
+        "//runtime/util:logging_tensor_buffer",
     ],
 )
 
@@ -139,11 +139,11 @@ cc_library(
     name = "llm_executor_base",
     hdrs = ["llm_executor_base.h"],
     deps = [
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
-        "//third_party/absl/strings:string_view",
-        "@litert//litert/cc:litert_tensor_buffer",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -153,10 +153,10 @@ cc_test(
     deps = [
         ":llm_executor",
         "@com_google_googletest//:gtest_main",
-        "@litert//litert/c:litert_tensor_buffer",
-        "@litert//litert/cc:litert_element_type",
-        "@litert//litert/cc:litert_model",
-        "@litert//litert/cc:litert_tensor_buffer",
+        "@litert//litert/litert/c:litert_tensor_buffer",
+        "@litert//litert/litert/cc:litert_element_type",
+        "@litert//litert/litert/cc:litert_model",
+        "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -165,13 +165,13 @@ cc_library(
     srcs = ["llm_executor_config.cc"],
     hdrs = ["llm_executor_config.h"],
     deps = [
-        "//third_party/absl/status",
-        "//third_party/absl/status:statusor",
-        "//third_party/absl/strings",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
         "//third_party/odml/infra/genai/inference/proto:sampler_params_cc_proto",
         "//third_party/odml/infra/genai/inference/utils/llm_utils:constraint_utils",
-        "//third_party/odml/litert_lm/runtime/util:logging",
-        "//third_party/odml/litert_lm/runtime/util:scoped_file",
+        "//runtime/util:logging",
+        "//runtime/util:scoped_file",
     ],
 )
 
@@ -181,6 +181,6 @@ cc_test(
     deps = [
         ":llm_executor_config",
         "@com_google_googletest//:gtest_main",
-        "//third_party/absl/status",
+        "@com_google_absl//absl/status",
     ],
 )
