--- a/runtime/executor/BUILD
+++ b/runtime/executor/BUILD
@@ -27,11 +27,11 @@ cc_library(
     srcs = ["litert_compiled_model_executor_utils.cc"],
     hdrs = ["litert_compiled_model_executor_utils.h"],
     deps = [
-        "@com_google_absl//absl/container:btree",
-        "@com_google_absl//absl/container:flat_hash_set",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
+        "@abseil-cpp//absl/container:btree",
+        "@abseil-cpp//absl/container:flat_hash_set",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
         "@litert//litert/litert/cc:litert_buffer_ref",
         "@litert//litert/litert/cc:litert_expected",
         "@litert//litert/litert/cc:litert_model",
@@ -50,14 +50,14 @@ cc_library(
         ":litert_compiled_model_executor_utils",
         ":llm_executor",
         ":llm_executor_config",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/log:absl_log",
-        "@com_google_absl//absl/memory",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:string_view",
-        "@com_google_absl//absl/types:span",
+        "@abseil-cpp//absl/container:flat_hash_map",
+        "@abseil-cpp//absl/log:absl_log",
+        "@abseil-cpp//absl/memory",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:string_view",
+        "@abseil-cpp//absl/types:span",
         "@litert//litert/litert/c:litert_common",
         "@litert//litert/litert/cc:litert_compiled_model",
         "@litert//litert/litert/cc:litert_environment",
@@ -83,14 +83,14 @@ cc_test(
         ":llm_executor_config",
         ":llm_litert_compiled_model_executor",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings:string_view",
         "@litert//litert/litert/cc:litert_buffer_ref",
         "@litert//litert/litert/cc:litert_expected",
         "@litert//litert/litert/cc:litert_model",
         "//runtime/util:litert_status_util",
         "//runtime/util:model_asset_bundle_resources",
-        "//third_party/tensorflow/lite:model_builder",
+        "@tensorflow//tensorflow/lite:model_builder",
     ],
 )
 
@@ -101,11 +101,11 @@ cc_library(
     deps = [
         ":llm_executor",
         ":llm_executor_config",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:string_view",
-        "@com_google_absl//absl/types:span",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:string_view",
+        "@abseil-cpp//absl/types:span",
         "@litert//litert/litert/cc:litert_tensor_buffer",
         "//runtime/util:convert_tensor_buffer",
         "//runtime/util:litert_status_util",
@@ -119,8 +119,8 @@ cc_test(
         ":fake_llm_executor",
         ":llm_executor",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/types:span",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/types:span",
         "//runtime/util:convert_tensor_buffer",
     ],
 )
@@ -139,10 +139,10 @@ cc_library(
     name = "llm_executor_base",
     hdrs = ["llm_executor_base.h"],
     deps = [
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:string_view",
         "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
 )
@@ -165,9 +165,9 @@ cc_library(
     srcs = ["llm_executor_config.cc"],
     hdrs = ["llm_executor_config.h"],
     deps = [
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
         "//third_party/odml/infra/genai/inference/proto:sampler_params_cc_proto",
         "//third_party/odml/infra/genai/inference/utils/llm_utils:constraint_utils",
         "//runtime/util:logging",
@@ -181,6 +181,6 @@ cc_test(
     deps = [
         ":llm_executor_config",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/status",
+        "@abseil-cpp//absl/status",
     ],
 )
