--- a/runtime/util/BUILD
+++ b/runtime/util/BUILD
@@ -29,8 +29,8 @@ cc_library(
     name = "convert_tensor_buffer",
     hdrs = ["convert_tensor_buffer.h"],
     deps = [
-        "@com_google_absl//absl/log:absl_check",
-        "@com_google_absl//absl/types:span",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/types:span",
         "@litert//litert/litert/c:litert_common",
         "@litert//litert/litert/cc:litert_element_type",
         "@litert//litert/litert/cc:litert_expected",
@@ -46,7 +46,7 @@ cc_test(
     deps = [
         ":convert_tensor_buffer",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/types:span",
+        "@abseil-cpp//absl/types:span",
         "@litert//litert/litert/c:litert_common",
         "@litert//litert/litert/cc:litert_model",
         "@litert//litert/litert/cc:litert_tensor_buffer",
@@ -61,8 +61,8 @@ cc_library(
         "status_macros.h",
     ],
     deps = [
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
         "@litert//litert/litert/c:litert_common",
         "@litert//litert/litert/cc:litert_expected",
         "@litert//litert/litert/cc:litert_macros",
@@ -75,8 +75,8 @@ cc_test(
     deps = [
         ":litert_status_util",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
         "@litert//litert/litert/c:litert_common",
         "@litert//litert/litert/cc:litert_expected",
     ],
@@ -88,8 +88,8 @@ cc_test(
     deps = [
         ":litert_status_util",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
     ],
 )
 
@@ -97,7 +97,7 @@ cc_library(
     name = "logging",
     hdrs = ["logging.h"],
     deps = [
-        "@com_google_absl//absl/strings",
+        "@abseil-cpp//absl/strings",
     ],
 )
 
@@ -106,9 +106,9 @@ cc_library(
     srcs = ["logging_tensor_buffer.cc"],
     hdrs = ["logging_tensor_buffer.h"],
     deps = [
-        "@com_google_absl//absl/log:absl_check",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/types:span",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/types:span",
         "@litert//litert/litert/cc:litert_element_type",
         "@litert//litert/litert/cc:litert_tensor_buffer",
     ],
@@ -160,9 +160,9 @@ cc_library(
     ],
     deps = [
         ":scoped_file",
-        "@com_google_absl//absl/cleanup",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
+        "@abseil-cpp//absl/cleanup",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
         "//runtime/util:litert_status_util",
     ],
 )
@@ -175,8 +175,8 @@ cc_test(
         ":scoped_file",
         "//testing/base/public:gunit",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings:string_view",
     ],
 )
 
@@ -188,8 +188,8 @@ cc_library(
     }),
     hdrs = ["scoped_file.h"],
     deps = [
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings:string_view",
         "//runtime/util:litert_status_util",
     ],
 )
@@ -206,12 +206,12 @@ cc_library(
         ":external_file_cc_proto",
         ":external_file_handler",
         ":zip_utils",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/memory",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:str_format",
+        "@abseil-cpp//absl/container:flat_hash_map",
+        "@abseil-cpp//absl/memory",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:str_format",
         "@litert//litert/litert/cc:litert_macros",
     ],
 )
@@ -236,11 +236,11 @@ cc_library(
     ],
     deps = [
         ":external_file_cc_proto",
-        "@com_google_absl//absl/memory",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:str_format",
+        "@abseil-cpp//absl/memory",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:str_format",
         "@litert//litert/litert/cc:litert_macros",
     ],
 )
@@ -250,9 +250,9 @@ cc_library(
     srcs = ["zip_readonly_mem_file.cc"],
     hdrs = ["zip_readonly_mem_file.h"],
     deps = [
-        "@com_google_absl//absl/strings",
-        "//third_party/minizip:zlib_minizip",
-        "//third_party/zlib:zlibheaders",
+        "@abseil-cpp//absl/strings",
+        "@minizip-ng//minizip:zlib_minizip",
+        "@zlib//zlib:zlibheaders",
     ],
 )
 
@@ -266,14 +266,14 @@ cc_library(
     deps = [
         ":external_file_cc_proto",
         ":zip_readonly_mem_file",
-        "@com_google_absl//absl/cleanup",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/log:absl_log",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings:string_view",
-        "//third_party/minizip:zlib_minizip",
+        "@abseil-cpp//absl/cleanup",
+        "@abseil-cpp//absl/container:flat_hash_map",
+        "@abseil-cpp//absl/log:absl_log",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings:string_view",
+        "@minizip-ng//minizip:zlib_minizip",
         "@litert//litert/litert/cc:litert_macros",
-        "//third_party/zlib:zlibheaders",
+        "@zlib//zlib:zlibheaders",
     ],
 )
