--- a/runtime/core/BUILD
+++ b/runtime/core/BUILD
@@ -27,18 +27,18 @@ cc_library(
     srcs = ["engine_impl.cc"],
     deps = [
         ":session_factory",
-        "@com_google_absl//absl/log",
-        "@com_google_absl//absl/log:absl_check",
-        "@com_google_absl//absl/log:absl_log",
-        "@com_google_absl//absl/log:check",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/log",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/log:absl_log",
+        "@abseil-cpp//absl/log:check",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:string_view",
         "//runtime/components:sentencepiece_tokenizer",
         "//runtime/components:tokenizer",
         "//runtime/engine:engine_interface",
-        "//runtime/engine:llm_model_settings",
+        "//runtime/engine:engine_settings",
         "//runtime/executor:litert_compiled_model_executor_utils",
         "//runtime/executor:llm_executor",
         "//runtime/executor:llm_executor_config",
@@ -59,12 +59,11 @@ cc_test(
     deps = [
         ":engine_impl",  # buildcleaner: keep
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/log:absl_check",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
         "//runtime/engine:engine_interface",
-        "//runtime/engine:llm_model_settings",
+        "//runtime/engine:engine_settings",
         "//runtime/executor:llm_executor_config",
     ],
 )
@@ -74,10 +73,10 @@ cc_library(
     srcs = ["pipeline.cc"],
     hdrs = ["pipeline.h"],
     deps = [
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:string_view",
         "@litert//litert/litert/cc:litert_tensor_buffer",
         "//runtime/components:sampler",
         "//runtime/components:token_id_util",
@@ -114,12 +113,12 @@ cc_library(
     hdrs = ["session_basic.h"],
     deps = [
         ":pipeline",
-        "@com_google_absl//absl/log:absl_log",
-        "@com_google_absl//absl/memory",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/log:absl_log",
+        "@abseil-cpp//absl/memory",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:string_view",
         "//runtime/components:sampler",
         "//runtime/components:tokenizer",
         "//runtime/components:top_p_cpu_sampler",
@@ -155,7 +154,7 @@ cc_library(
     hdrs = ["session_factory.h"],
     deps = [
         ":session_basic",
-        "@com_google_absl//absl/status:statusor",
+        "@abseil-cpp//absl/status:statusor",
         "//runtime/components:tokenizer",
         "//runtime/engine:engine_interface",
         "//runtime/executor:llm_executor",
@@ -169,8 +168,8 @@ cc_test(
     deps = [
         ":session_factory",
         "@com_google_googletest//:gtest_main",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings:string_view",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings:string_view",
         "//runtime/components:tokenizer",
         "//runtime/executor:fake_llm_executor",
         "//runtime/executor:llm_executor",
